--- a/app/javascript/stylesheets/components/transitionto.module.scss
+++ b/app/javascript/stylesheets/components/transitionto.module.scss
@@ -1,3 +1,39 @@
+@import '../base_styles.scss';
+
+.transitionTo {
+    height: 96vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.toForm {
+    min-height: 21em;
+    min-width: 21em;
+    max-height: 27em;
+    max-width: 31.25em;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    padding: 2em 3em 2em 3em;
+    margin-bottom: 4em;
+    border-radius: 10px 60px;
+    background: $abc-secondary-1;
+    box-shadow:
+    0 2.2px 2.7px rgba(0, 0, 0, 0.028),
+    0 5px 7px rgba(0, 0, 0, 0.042);
+}
+
+.toForm > * {
+    font-family: $abc-font-primary;   
+    font-size: 18px;
+    color:#16324f;
+}
+
+.transitionTo > form {
+    animation: 1s ease-in 0s 1 slowAppear;
+}
+
 @keyframes slowAppear {
     0% {
       opacity: 0;
@@ -9,48 +45,18 @@
     }
 }
 
-.transitionTo {
-    height: 98vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.toForm {
-    min-height: 21em;
-    min-width: 21em;
-    max-height: 25em;
-    max-width: 31.25em;
-    display: flex;
-    flex-direction: column;
-    align-content: space-around;
-    padding: 4em 4em 6em 4em;
-    margin-bottom: 5em;
-    border-radius: 10px 60px;
-    background: #fff;
-    box-shadow:
-    0 2.2px 2.7px rgba(0, 0, 0, 0.028),
-    0 5px 7px rgba(0, 0, 0, 0.042);
-}
-
-.toForm > * {
-    font-family: "Lato", sans-serif;   
-    font-size: 18px;
-    color:#16324f;
-}
-
-.transitionTo > form {
-    animation: 1s ease-in 0s 1 slowAppear;
-}
-
-.buttonFields {
-    position: relative;
+.buttonFields [type="submit"] {
+    background-color: $abc-accent-orange-4;
+    color: $abc-accent-orange-1;
+    vertical-align: baseline;
+    margin-left: $abc-size-6;
 }
 
 .buttonFields :nth-last-child(2) {
-    color:#f97116;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    color:$abc-secondary-5;
+    display: inline;
+    padding-top: 8px;
+    vertical-align: baseline;
+
 }
 
